--- a/src/main/webapp/createAccount.html
+++ b/src/main/webapp/createAccount.html
@@ -19,8 +19,8 @@
     </div>
 
 
-    <div class="right">
-        <h5>Sign</h5>
+    <div class="right-create">
+        <h5>Sign up</h5>
 
         <div class="inputs">
             <input type="text" placeholder="user name">
@@ -35,7 +35,7 @@
         <br>
         <br>
 
-        <p>Already have an account? <a href="#">Login here</a> it takes less than a minute</p>
+        <p>Already have an account? <a href="login.html">Login here</a> it takes less than a minute</p>
     </div>
 
 
