--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,9 @@
         <div id="product">
             <button class="btn btn-warning">View Cart</button>
             Products
-            <button class="btn btn-danger" >Login/Signin</button>
+            <a href="login.html">
+                <button class="btn btn-danger">Login/Signin</button>
+            </a>
         </div>
         <div class="cards container">
             <div class="card-group">
