--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -21,18 +21,19 @@
 
 	<div class="right">
 		<h5>Login</h5>
+		<form action="login-main" method="post">
 		<div class="inputs">
-			<input type="text" placeholder="user">
+			<input type="text" placeholder="user" name="user">
 			<br>
-			<input type="password" placeholder="password">
+			<input type="password" placeholder="password" name="password">
 		</div>
 
 		<br><br>
 
 		<br>
-		<a href="index.html">
-			<button>Login</button>
-		</a>
+			<button type="submit" value="submit">Login</button>
+
+		</form>
 
 		<br>
 		<br>
