--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="title">
-        <img src="cart.png" width="200" height="200"/>
+        <img src="assets/cart.png" width="200" height="200"/>
         <div class="title-head">
             <a id="title" href="#product">Shopping Cart</a>
         </div>
     </div>
-    <div class="products" target="product">
+    <div class="products" target="product" >
         <div id="product">
             <button class="btn btn-warning">View Cart</button>
             Products
@@ -25,7 +25,7 @@
         <div class="cards container">
             <div class="card-group">
                 <div class="card">
-                    <img src="headphones.jpg" class="card-img-top images"/>
+                    <img src="assets/headphones.jpg" class="card-img-top images"/>
                     <div class="card-body">
                         <h2 class="card-title">
                             Headphones
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="processor.jpg" class="card-img-top images"/>
+                    <img src="assets/processor.jpg" class="card-img-top images"/>
                     <div class="card-body">
                         <h2 class="card-title">
                             Processor
@@ -54,7 +54,7 @@
             <br>
             <div class="card-group">
                 <div class="card">
-                    <img src="keyboard.jpeg" class="card-img-top images"/>
+                    <img src="assets/keyboard.jpeg" class="card-img-top images"/>
                     <div class="card-body">
                         <h2 class="card-title">
                             Keyboard
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="mouse.jpg" class="card-img-top images"/>
+                    <img src="assets/mouse.jpg" class="card-img-top images"/>
                     <div class="card-body">
                         <h2 class="card-title">
                             Mouse
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+        <br><br>
     </div>
 </body>
 </html>
