--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<title>Login Page in HTML with CSS Code Example</title>
+	<title>Login Page</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 
@@ -22,15 +22,14 @@
 	<div class="right">
 		<h5>Login</h5>
 		<form action="login-main" method="post">
-		<div class="inputs">
-			<input type="text" placeholder="user" name="user">
-			<br>
-			<input type="password" placeholder="password" name="password">
-		</div>
+			<div class="inputs">
+				<input type="text" placeholder="user" name="user">
+				<br>
+				<input type="password" placeholder="password" name="password">
+			</div>
 
-		<br><br>
+			<br><br><br>
 
-		<br>
 			<button type="submit" value="submit">Login</button>
 
 		</form>
